[package]
name = "feather-registry"
version = "0.1.0"
authors = ["Jacob Emil Ulvedal Rosborg <jacob@rosborg.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
http = "0.2"
openssl = "0.10"
dotenv = "0.15"

rand = "0.7"
base64 = "0.13"

sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"